# gpt-3-youtube-summarizer

./: .gitignore  README.md  index.html  lambda_function.py  main.py  pyproject.toml  serve.py
.github/workflows/: main.yml
static/: index.html
