[tool.poetry]
name = "gpt-3-youtube-summarizer"
version = "0.1.0"
description = ""
authors = ["Cypress Frankenfeld <iamcypress@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
youtube-transcript-api = "^0.5.0"
bs4 = "^0.0.1"
openai = "^0.26.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
