[tool.poetry]
name = "gpt-3-youtube-summarizer"
version = "0.1.0"
description = ""
authors = ["Cypress Frankenfeld <iamcypress@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
youtube-transcript-api = "^0.5.0"
openai = "^0.26.1"
toml = "^0.10.2"
beautifulsoup4 = "^4.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
